force-app/main/default/objects/numm__FALaw__c/numm__FALaw__c.object-meta.xml
<CustomObject>
    <description>Objet des règles d&#39;entreprise</description>
    <label>Règle d&#39;entreprise</label>
    <nameField>
        <label>Nom de Règle d&#39;entreprise</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Règles d&#39;entreprise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>