force-app/main/default/objects/numm__FALaw__c/fields/numm__Entity__c.field-meta.xml
<CustomField>
    <fullName>numm__Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Règles d&#39;entreprise</relationshipLabel>
    <relationshipName>FALaws</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>