force-app/main/default/objects/numm__FALaw__c/fields/numm__Establishment__c.field-meta.xml
<CustomField>
    <fullName>numm__Establishment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipName>FALaws</relationshipName>
    <type>Lookup</type>
</CustomField>