force-app/main/default/objects/numm__FALaw__c/fields/numm__Notes__c.field-meta.xml
<CustomField>
    <fullName>numm__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>