force-app/main/default/objects/numm__FALaw__c/fields/numm__Plan__c.field-meta.xml
<CustomField>
    <fullName>numm__Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan d&#39;amortissement</label>
    <referenceTo>numm__FAParameter__c</referenceTo>
    <relationshipName>FALaws2</relationshipName>
    <type>Lookup</type>
</CustomField>