force-app/main/default/objects/numm__FALaw__c/fields/numm__Rule__c.field-meta.xml
<CustomField>
    <fullName>numm__Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Durée</label>
    <referenceTo>numm__FARule__c</referenceTo>
    <relationshipName>FALaws</relationshipName>
    <type>Lookup</type>
</CustomField>