force-app/main/default/objects/numm__FALaw__c/fields/numm__Section1__c.field-meta.xml
<CustomField>
    <fullName>numm__Section1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rubrique 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__Type__c</field>
            <operation>equals</operation>
            <value>Immobilisation</value>
        </filterItems>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__NumSection__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Section__c</referenceTo>
    <relationshipName>FALaw1</relationshipName>
    <type>Lookup</type>
</CustomField>