force-app/main/default/objects/numm__FALaw__c/fields/numm__SectionFree__c.field-meta.xml
<CustomField>
    <fullName>numm__SectionFree__c</fullName>
    <label>Rubrique libre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>