force-app/main/default/objects/numm__FALaw__c/fields/numm__Type__c.field-meta.xml
<CustomField>
    <fullName>numm__Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type d&#39;immobilisation</label>
    <referenceTo>numm__FAType__c</referenceTo>
    <relationshipName>FALaw</relationshipName>
    <type>Lookup</type>
</CustomField>