force-app/main/default/objects/numm__FALaw__c/fields/numm__TypeDepreciation__c.field-meta.xml
<CustomField>
    <fullName>numm__TypeDepreciation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type d&#39;amortissement</label>
    <referenceTo>numm__FAParameter__c</referenceTo>
    <relationshipName>FALaws3</relationshipName>
    <type>Lookup</type>
</CustomField>