force-app/main/default/objects/numm__FALaw__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>numm__Entity__c</columns>
    <columns>numm__Establishment__c</columns>
    <columns>numm__Plan__c</columns>
    <columns>numm__Type__c</columns>
    <columns>numm__TypeDepreciation__c</columns>
    <columns>numm__Rule__c</columns>
    <columns>numm__Section1__c</columns>
    <columns>numm__Section2__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>